--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -29,3 +29,4 @@ snow = "0.8.0"
 futures = "0.3.15"
 serde_cbor = "0.11.1"
 x25519-dalek = "1.1.1"
+minicbor = { version = "0.11.3", features = ["half"] }
