--- a/browser/Cargo.toml
+++ b/browser/Cargo.toml
@@ -18,9 +18,10 @@ once_cell = "1.7.0"
 wee_alloc = "0.4.5"
 float-ord = "0.2.0"
 chrono = { version = "0.4.19", features = ["wasmbind"] }
-payload = { path = "../payload" }
 snow = "0.8.0"
 serde_cbor = "0.11.1"
+utils = { path = "../utils" }
+minicbor = { version = "0.11.3", features = ["half"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.21"
