--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,7 +19,6 @@ async-trait = "0.1.42"
 once_cell = "1.5.2"
 serde_json = "1.0.61"
 sha2 = "0.9.3"
-payload = { path = "../payload/" }
 sqlx = {version="0.5.1", features=["postgres", "runtime-async-std-rustls", "json", "chrono", "offline"]}
 rust-argon2 = "0.8.3"
 rand = "0.7"
@@ -30,3 +29,5 @@ futures = "0.3.15"
 serde_cbor = "0.11.1"
 x25519-dalek = "1.1.1"
 minicbor = { version = "0.11.3", features = ["half", "alloc"] }
+utils = { path = "../utils" }
+
