--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -29,4 +29,5 @@ futures = "0.3.15"
 x25519-dalek = "1.1.1"
 minicbor = { version = "0.11.3", features = ["half", "alloc"] }
 utils = { path = "../utils" }
+include_dir = "0.6.2"
 
