--- a/browser/Cargo.toml
+++ b/browser/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.0.0"
 authors = ["Dung Ph <dungph@zoho.com>"]
 edition = "2018"
 
-[build]
-target = "wasm32-unknown-unknown"
-
 [dependencies]
 seed = "0.8.0"
 web-sys = "0.3"
@@ -15,9 +12,11 @@ once_cell = "1.7.0"
 wee_alloc = "0.4.5"
 float-ord = "0.2.0"
 chrono = { version = "0.4.19", features = ["wasmbind"] }
-snow = "0.8.0"
 utils = { path = "../utils" }
+noise-ix = { path = "../noise-ix" }
 minicbor = { version = "0.11.3", features = ["half"] }
+rand = "0.8.4"
+serde = "1.0.130"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.21"
