--- a/.github/workflows/browser.yml
+++ b/.github/workflows/browser.yml
@@ -29,6 +29,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+    - name: Install wasm32-unknown-unknown
+      uses: actions-rs/toolchain@v1
+      with:
+        target: wasm32-unknown-unknown
     - name: Cache
       uses: actions/cache@v2.1.4
       with:
