--- a/.github/workflows/browser.yml
+++ b/.github/workflows/browser.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Install wasm32-unknown-unknown
       uses: actions-rs/toolchain@v1
       with:
+        toolchain: stable
         target: wasm32-unknown-unknown
     - name: Cache
       uses: actions/cache@v2.1.4
