try install trunk via cargo

--- a/.github/workflows/browser.yml
+++ b/.github/workflows/browser.yml
@@ -42,9 +42,12 @@ jobs:
             Cargo.lock
             target
         key: ${{ runner.os }}-cargo-browser-${{ hashFiles('**/Cargo.lock') }}
-
+    
     - name: Install trunk
-      run: wget -qO- https://github.com/thedodd/trunk/releases/download/v0.14.0/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
+      uses: actions-rs/install@v0.1
+        with:
+          crate: trunk
+          version: latest
     - name: Build
       run: trunk build
 
