--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -47,21 +47,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install sqlx-cli
-      uses: actions-rs/install@v0.1
+    - uses: Swatinem/rust-cache@v1
+      with:
+        cache-on-failure: true
+
+    - uses: actions-rs/install@v0.1
       with:
         crate: sqlx-cli
-        version: latest
-        use-tool-cache: true
-
-    - name: Cache
-      uses: actions/cache@v2.1.4
-      with:
-        path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Migrate
       run: sqlx migrate run
